fix chat icon being visible in vod&clips cards; fix incorrect urls on vods&clips

--- a/src/html/popup.css
+++ b/src/html/popup.css
@@ -874,7 +874,7 @@ html, body {
 }
 
 .contentButton.bottom {
-    display: inline-block;
+    /*display: inline-block;*/
     float: left;
 }
 
